--- a/Lazztech.Cloud.ClientFacade/Pages/Shared/Minton/_Layout_Admin.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Shared/Minton/_Layout_Admin.cshtml
@@ -130,8 +130,8 @@
                                 <span class="menu-arrow"></span>
                             </a>
                             <ul class="list-unstyled">
-                                <li><a href="/Admin">Admin Dashboard</a></li>
-                                <li><a href="/Admin/EventManagement">Events</a></li>
+                                <li><a href="/Admin">Dashboard</a></li>
+                                <li><a href="/Admin/EventManagement">Event Management</a></li>
                             </ul>
                         </li>
 
