--- a/Lazztech.Cloud.ClientFacade/Pages/Admin/EventManagement/MentorInvites.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Admin/EventManagement/MentorInvites.cshtml
@@ -34,7 +34,7 @@
 
 <div class="row">
     <div class="col">
-        <table class="table table-striped table-dark table-responsive-sm">
+        <table class="table table-responsive">
             <thead>
                 <tr>
                     <th>Created</th>
