--- a/Lazztech.Cloud.ClientFacade/Pages/Admin/EventManagement/Mentors/Index.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Admin/EventManagement/Mentors/Index.cshtml
@@ -10,7 +10,7 @@
 <p>
     <a asp-page="Create">Create New</a>
 </p>
-<table class="table table-striped table-dark table-responsive-sm table-responsive-md">
+<table class="table table-responsive">
     <thead>
         <tr>
             <th>
@@ -66,15 +66,6 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Event.Name)
-            </td>
-            <td>
-                <a class="btn btn-dark" role="button" asp-page="./Edit" asp-route-id="@item.MentorId">Edit</a>
-            </td>
-            <td>
-                <a class="btn btn-dark" role="button" asp-page="./Details" asp-route-id="@item.MentorId">Details</a>
-            </td>
-            <td>
-                <a class="btn btn-dark" role="button" asp-page="./Delete" asp-route-id="@item.MentorId">Delete</a>
             </td>
             <td>
                 <a asp-page="./Edit" asp-route-id="@item.MentorId">Edit</a> |
