--- a/Lazztech.Cloud.ClientFacade/Pages/Shared/Minton/_Layout_Admin.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Shared/Minton/_Layout_Admin.cshtml
@@ -5,11 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Lazztech.Cloud.CloudWebApp</title>
 
-    <environment include="Development">
-        @*Bootstrap 4 theme*@
-        @*<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-            <link rel="stylesheet" href="~/css/site.css" />*@
-
+    <environment>
         @*Minton theme*@
         <link rel="stylesheet" href="~/minton/plugins/switchery/switchery.min.css" />
         <link rel="stylesheet" href="~/minton/plugins/jquery-circliful/css/jquery.circliful.css" />
@@ -21,25 +17,7 @@
         <link rel="stylesheet" href="~/minton/dark/assets/js/modernizr.min.js" />
         @*Minton theme*@
 
-    </environment>
-    <environment exclude="Development">
-        @*<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-        crossorigin="anonymous" />*@
-
-        @*Minton theme*@
-        <link rel="stylesheet" href="~/minton/plugins/switchery/switchery.min.css" />
-        <link rel="stylesheet" href="~/minton/plugins/jquery-circliful/css/jquery.circliful.css" />
-
-        <link rel="stylesheet" href="~/minton/dark/assets/css/bootstrap.min.css" />
-        <link rel="stylesheet" href="~/minton/dark/assets/css/style_dark.css" />
-        <link rel="stylesheet" href="~/minton/dark/assets/css/icons.css" />
-
-        <link rel="stylesheet" href="~/minton/dark/assets/js/modernizr.min.js" />
-        @*Minton theme*@
-
-        <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+        <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
 </head>
 <body class="fixed-left">
@@ -191,104 +169,9 @@
         </div>
     </div>
 
-    <environment include="Development">
-        <!--Bootstrap 4 Section-->
-        @*<script src="~/lib/jquery/dist/jquery.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>*@
-        <script src="~/js/site.js" asp-append-version="true"></script>
+    <environment>
         <!--End Of Bootstrap 4 Section-->
         <script src="~/lib//jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
-
-
-        <!--Minton Theme Section-->
-        <script>
-            var resizefunc = [];
-        </script>
-
-        <!-- Plugins  -->
-        <script src="~/minton/dark/assets/js/jquery.min.js"></script>
-        <script src="~/minton/dark/assets/js/popper.min.js"></script>
-        <script src="~/minton/dark/assets/js/bootstrap.min.js"></script>
-        <script src="~/minton/dark/assets/js/detect.js"></script>
-        <script src="~/minton/dark/assets/js/fastclick.js"></script>
-        <script src="~/minton/dark/assets/js/jquery.slimscroll.js"></script>
-        <script src="~/minton/dark/assets/js/jquery.blockUI.js"></script>
-        <script src="~/minton/dark/assets/js/waves.js"></script>
-        <script src="~/minton/dark/assets/js/wow.min.js"></script>
-        <script src="~/minton/dark/assets/js/jquery.nicescroll.js"></script>
-        <script src="~/minton/dark/assets/js/jquery.scrollTo.min.js"></script>
-        <script src="~/minton/plugins/switchery/switchery.min.js"></script>
-
-        <!-- Counter Up  -->
-        <script src="~/minton/plugins/waypoints/lib/jquery.waypoints.min.js"></script>
-        <script src="~/minton/plugins/counterup/jquery.counterup.min.js"></script>
-
-        <!-- circliful Chart -->
-        <script src="~/minton/plugins/jquery-circliful/js/jquery.circliful.min.js"></script>
-        <script src="~/minton/plugins/jquery-sparkline/jquery.sparkline.min.js"></script>
-
-        <!-- skycons -->
-        <script src="~/minton/plugins/skyicons/skycons.min.js"></script>
-
-        <!-- Page js  -->
-        <script src="~/minton/dark/assets/pages/jquery.dashboard.js"></script>
-
-        <!-- Custom main Js -->
-        <script src="~/minton/dark/assets/js/jquery.core.js"></script>
-        <script src="~/minton/dark/assets/js/jquery.app.js"></script>
-
-        <script type="text/javascript">
-            jQuery(document).ready(function ($) {
-                $('.counter').counterUp({
-                    delay: 100,
-                    time: 1200
-                });
-                $('.circliful-chart').circliful();
-            });
-
-            // BEGIN SVG WEATHER ICON
-            if (typeof Skycons !== 'undefined') {
-                var icons = new Skycons(
-                    { "color": "#3bafda" },
-                    { "resizeClear": true }
-                ),
-                    list = [
-                        "clear-day", "clear-night", "partly-cloudy-day",
-                        "partly-cloudy-night", "cloudy", "rain", "sleet", "snow", "wind",
-                        "fog"
-                    ],
-                    i;
-
-                for (i = list.length; i--;)
-                    icons.set(list[i], list[i]);
-                icons.play();
-            };
-
-        </script>
-        <!--End Of Minton-->
-
-    </environment>
-    <environment exclude="Development">
-        @*<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-                asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
-                integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-                crossorigin="anonymous">
-        </script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-                integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-                crossorigin="anonymous">
-        </script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-                asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
-                integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-                crossorigin="anonymous">
-        </script>
-        <script src="~/js/site.min.js" asp-append-version="true"></script>*@
-
-        <script src="~/js/site.js" asp-append-version="true"></script>
-        <!--End Of Bootstrap 4 Section-->
-        <script src="~/lib//jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
-
 
         <!--Minton Theme Section-->
         <script>
