Changed Mentor Description to Skills

--- a/Lazztech.Cloud.ClientFacade/Pages/Admin/EventManagement/Mentors/Details.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Admin/EventManagement/Mentors/Details.cshtml
@@ -33,10 +33,10 @@
             @Html.DisplayFor(model => model.Mentor.Image)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Mentor.Description)
+            @Html.DisplayNameFor(model => model.Mentor.Skills)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Mentor.Description)
+            @Html.DisplayFor(model => model.Mentor.Skills)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Mentor.ProfessionalTitle)
