--- a/Lazztech.Cloud.ClientFacade/Pages/Admin/EventManagement/Mentors/Create.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Admin/EventManagement/Mentors/Create.cshtml
@@ -31,9 +31,9 @@
                 <span asp-validation-for="Mentor.LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Mentor.Description" class="control-label"></label>
-                <input asp-for="Mentor.Description" class="form-control" />
-                <span asp-validation-for="Mentor.Description" class="text-danger"></span>
+                <label asp-for="Mentor.Skills" class="control-label"></label>
+                <input asp-for="Mentor.Skills" class="form-control" />
+                <span asp-validation-for="Mentor.Skills" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Mentor.ProfessionalTitle" class="control-label"></label>
