--- a/Lazztech.Cloud.ClientFacade/Pages/Event/Invites.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Event/Invites.cshtml
@@ -42,9 +42,9 @@
                 <span asp-validation-for="Invite.Mentor.LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Invite.Mentor.Description" class="control-label"></label>
-                <input asp-for="Invite.Mentor.Description" class="form-control" />
-                <span asp-validation-for="Invite.Mentor.Description" class="text-danger"></span>
+                <label asp-for="Invite.Mentor.Skills" class="control-label"></label>
+                <input asp-for="Invite.Mentor.Skills" class="form-control" />
+                <span asp-validation-for="Invite.Mentor.Skills" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Invite.Mentor.ProfessionalTitle" class="control-label"></label>
