--- a/Lazztech.Cloud.ClientFacade/Pages/Shared/Minton/_Layout_HackathonHandler.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Shared/Minton/_Layout_HackathonHandler.cshtml
@@ -23,7 +23,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Lazztech.Cloud.CloudWebApp</title>
 
-    <environment include="Development">
+    <environment>
         <link rel="stylesheet" href="~/confetti/css/confetti.css" />
 
         @*Minton theme*@
@@ -311,7 +311,7 @@
     </div>
     </div>
 
-    <environment include="Development">
+    <environment>
         <!--Bootstrap 4 Section-->
         @*<script src="~/lib/jquery/dist/jquery.js"></script>*@
         @*<script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>*@
