Added to the Marketing dao classes, setup connections string for development, & added marketing entities to the dbcontext

--- a/Lazztech.Cloud.ClientFacade/Pages/Shared/Minton/_Layout_Admin.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Shared/Minton/_Layout_Admin.cshtml
@@ -115,6 +115,19 @@
 
                         <li class="has_sub">
                             <a href="javascript:void(0);" class="waves-effect waves-primary">
+                                <i class="ti-home"></i><span> Marketing </span>
+                                <span class="menu-arrow"></span>
+                            </a>
+                            <ul class="list-unstyled">
+                                <li><a href="/Marketing">Dashboard</a></li>
+                                <li><a href="/Marketing/FocusGroups">Processed</a></li>
+                                <li><a href="/Marketing/Nodes">Known</a></li>
+                                <li><a href="/Marketing/Campaigns">Scan</a></li>
+                            </ul>
+                        </li>
+
+                        <li class="has_sub">
+                            <a href="javascript:void(0);" class="waves-effect waves-primary">
                                 <i class="ti-home"></i><span> Vision </span>
                                 <span class="menu-arrow"></span>
                             </a>
